--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,18 +30,24 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.antlr-2.7.7.jar=web/WEB-INF/libs/antlr-2.7.7.jar
-file.reference.dom4j-1.6.1.jar=web/WEB-INF/libs/dom4j-1.6.1.jar
-file.reference.geronimo-jta_1.1_spec-1.1.1.jar=web/WEB-INF/libs/geronimo-jta_1.1_spec-1.1.1.jar
-file.reference.hibernate-commons-annotations-5.0.0.Final.jar=web/WEB-INF/libs/hibernate-commons-annotations-5.0.0.Final.jar
-file.reference.hibernate-core-5.0.0.Final.jar=web/WEB-INF/libs/hibernate-core-5.0.0.Final.jar
-file.reference.hibernate-entitymanager-5.0.0.Final.jar=web/WEB-INF/libs/hibernate-entitymanager-5.0.0.Final.jar
-file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar=web/WEB-INF/libs/hibernate-jpa-2.1-api-1.0.0.Final.jar
-file.reference.jandex-1.2.2.Final.jar=web/WEB-INF/libs/jandex-1.2.2.Final.jar
-file.reference.javassist-3.18.1-GA.jar=web/WEB-INF/libs/javassist-3.18.1-GA.jar
-file.reference.jboss-logging-3.3.0.Final.jar=web/WEB-INF/libs/jboss-logging-3.3.0.Final.jar
-file.reference.jboss-logging-annotations-1.2.0.Beta1.jar=web/WEB-INF/libs/jboss-logging-annotations-1.2.0.Beta1.jar
-file.reference.jboss-transaction-api_1.2_spec-1.0.0.Final.jar=web/WEB-INF/libs/jboss-transaction-api_1.2_spec-1.0.0.Final.jar
+file.reference.antlr-2.7.7.jar=web\\WEB-INF\\hibernate liberies\\antlr-2.7.7.jar
+file.reference.c3p0-0.9.2.1.jar=web\\WEB-INF\\hibernate liberies\\c3p0-0.9.2.1.jar
+file.reference.dom4j-1.6.1.jar=web\\WEB-INF\\hibernate liberies\\dom4j-1.6.1.jar
+file.reference.ehcache-core-2.4.3.jar=web\\WEB-INF\\hibernate liberies\\ehcache-core-2.4.3.jar
+file.reference.hibernate-c3p0-4.3.1.Final.jar=web\\WEB-INF\\hibernate liberies\\hibernate-c3p0-4.3.1.Final.jar
+file.reference.hibernate-commons-annotations-4.0.4.Final.jar=web\\WEB-INF\\hibernate liberies\\hibernate-commons-annotations-4.0.4.Final.jar
+file.reference.hibernate-core-4.3.1.Final.jar=web\\WEB-INF\\hibernate liberies\\hibernate-core-4.3.1.Final.jar
+file.reference.hibernate-ehcache-4.3.1.Final.jar=web\\WEB-INF\\hibernate liberies\\hibernate-ehcache-4.3.1.Final.jar
+file.reference.hibernate-entitymanager-4.3.1.Final.jar=web\\WEB-INF\\hibernate liberies\\hibernate-entitymanager-4.3.1.Final.jar
+file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar=web\\WEB-INF\\hibernate liberies\\hibernate-jpa-2.1-api-1.0.0.Final.jar
+file.reference.jandex-1.1.0.final.jar=web\\WEB-INF\\hibernate liberies\\jandex-1.1.0.final.jar
+file.reference.javassist-3.18.1-GA.jar=web\\WEB-INF\\hibernate liberies\\javassist-3.18.1-GA.jar
+file.reference.jboss-logging-3.1.3.GA.jar=web\\WEB-INF\\hibernate liberies\\jboss-logging-3.1.3.GA.jar
+file.reference.jboss-transaction-api_1.2_spec-1.0.0.Final.jar=web\\WEB-INF\\hibernate liberies\\jboss-transaction-api_1.2_spec-1.0.0.Final.jar
+file.reference.mchange-commons-java-0.2.3.4.jar=web\\WEB-INF\\hibernate liberies\\mchange-commons-java-0.2.3.4.jar
+file.reference.postgresql-9.2-1002.jdbc4.jar=web\\WEB-INF\\hibernate liberies\\postgresql-9.2-1002.jdbc4.jar
+file.reference.slf4j-api-1.6.1.jar=web\\WEB-INF\\hibernate liberies\\slf4j-api-1.6.1.jar
+file.reference.slf4j-simple-1.6.1.jar=web\\WEB-INF\\hibernate liberies\\slf4j-simple-1.6.1.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -56,23 +62,26 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${libs.hibernate4-persistence.classpath}:\
     ${libs.PostgreSQLDriver.classpath}:\
-    ${libs.jpa20-persistence.classpath}:\
-    ${libs.hibernate4-support.classpath}:\
-    ${libs.jpa2-persistence.classpath}:\
     ${file.reference.antlr-2.7.7.jar}:\
+    ${file.reference.c3p0-0.9.2.1.jar}:\
     ${file.reference.dom4j-1.6.1.jar}:\
-    ${file.reference.geronimo-jta_1.1_spec-1.1.1.jar}:\
-    ${file.reference.hibernate-commons-annotations-5.0.0.Final.jar}:\
-    ${file.reference.hibernate-core-5.0.0.Final.jar}:\
-    ${file.reference.hibernate-entitymanager-5.0.0.Final.jar}:\
+    ${file.reference.ehcache-core-2.4.3.jar}:\
+    ${file.reference.hibernate-c3p0-4.3.1.Final.jar}:\
+    ${file.reference.hibernate-commons-annotations-4.0.4.Final.jar}:\
+    ${file.reference.hibernate-core-4.3.1.Final.jar}:\
+    ${file.reference.hibernate-ehcache-4.3.1.Final.jar}:\
+    ${file.reference.hibernate-entitymanager-4.3.1.Final.jar}:\
     ${file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar}:\
-    ${file.reference.jandex-1.2.2.Final.jar}:\
+    ${file.reference.jandex-1.1.0.final.jar}:\
     ${file.reference.javassist-3.18.1-GA.jar}:\
-    ${file.reference.jboss-logging-3.3.0.Final.jar}:\
-    ${file.reference.jboss-logging-annotations-1.2.0.Beta1.jar}:\
-    ${file.reference.jboss-transaction-api_1.2_spec-1.0.0.Final.jar}
+    ${file.reference.jboss-logging-3.1.3.GA.jar}:\
+    ${file.reference.jboss-transaction-api_1.2_spec-1.0.0.Final.jar}:\
+    ${file.reference.mchange-commons-java-0.2.3.4.jar}:\
+    ${file.reference.postgresql-9.2-1002.jdbc4.jar}:\
+    ${file.reference.slf4j-api-1.6.1.jar}:\
+    ${file.reference.slf4j-simple-1.6.1.jar}:\
+    ${libs.hibernate4-persistence.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
